# Antigen

./: .gitignore  AUTHORS  INSTALL.md  README.md  environment.yml  git-workflow.md  pyproject.toml  reduce_virus2.py  reduce_virusp.py  setup.py
.github/ISSUE_TEMPLATE/: instrument-intake.md
antigen/: ccd.py  cli.py  config.py  datasets.py  fiber.py  input_args.py  io.py  manifest.py  plot.py  process.py  reduce_virus2.py  sky.py  utils.py
antigen/config_files/gcms/VP1B/: gcms_config_VP1B.yml  gcms_lines_VP1B.txt  gcms_throughput_VP1B.txt
antigen/config_files/gcms/VP1Blue/: config.yml  ifucen.txt  line_list.txt
antigen/config_files/gcms/VP1R/: gcms_config_VP1R.yml  gcms_lines_VP1R.txt  gcms_throughput_VP1R.txt
antigen/config_files/gcms/VP1Red/: default_throughput.txt  gcms_config_vp1red.yml  line_list.txt
antigen/config_files/templates/: manifest_template_virus2.yml
antigen/config_files/virus2/: virus2_manifest_template.yml
antigen/config_files/virus2/D3G/: config.yml  default_throughput.txt  ifucen.txt  line_list.txt  virus2_config_D3G.yml  virus2_ifucen_D3G.txt  virus2_lines_D3G_new.txt  virus2_lines_green.txt  virus2_throughput_D3G.txt
antigen/config_files/virusw/high/: line_list.txt  virusw_config_high.yml  virusw_lines_high.txt
antigen/config_files/virusw/low/: config.yml  line_list.txt  virusw_config_low.yml  virusw_lines_low.txt
scripts/: antigen_build_manifest_virus2.py  antigen_prepare_gcms_dataset.py  antigen_read_manifest.py  antigen_reduce_virus2.py  antigen_reduce_virus2_manifest.py  antigen_view_fits.py
